# Smart-Query

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  sqlagent.py
.chainlit/: config.toml
notebooks/: database_content.sql  sqldb.ipynb
public/: footer.js  theme.json
