[project]
name = "smart-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.6",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.3",
    "streamlit>=1.53.1",
]
